k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-flask-app
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30000  # Change this if necessary
  selector:
    app: simple-flask-app
